--- a/UguiLibrary/Assembly-CSharp-Editor.csproj
+++ b/UguiLibrary/Assembly-CSharp-Editor.csproj
@@ -53,7 +53,8 @@
     <UnityVersion>2021.1.20f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scenes\JJaery\uGUI\Util\Editor\HotKeys.cs" />
+    <Compile Include="Assets\JJaery\uGUI\RecyclingScrollView\Editor\UIRecyclingScrollViewEditor.cs" />
+    <Compile Include="Assets\JJaery\uGUI\Util\Editor\HotKeys.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -724,6 +725,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp.csproj">
+      <Project>{130F15E0-4CC7-D20B-06BA-A58A924CE25F}</Project>
+      <Name>Assembly-CSharp</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
